config/gateway/gateway-plugin/redis.yaml
# https://www.callicoder.com/deploy-multi-container-go-redis-app-kubernetes/
# TODO: 
apiVersion: apps/v1  # API version
kind: Deployment
metadata:
  name: arks-redis-master # Unique name for the deployment
  namespace: arks-operator-system
  labels:
    app: redis       # Labels to be applied to this deployment
spec:
  selector:
    matchLabels:     # This deployment applies to the Pods matching these labels
      app: redis
      role: master
      tier: backend
  replicas: 1        # Run a single pod in the deployment
  template:          # Template for the pods that will be created by this deployment
    metadata:
      labels:        # Labels to be applied to the Pods in this deployment
        app: redis
        role: master
        tier: backend
    spec:            # Spec for the container which will be run inside the Pod.
      containers:
      - name: master
        image: redis
        resources:
          requests:
            cpu: 1
            memory: 1Gi
        ports:
        - containerPort: 6379
